# csv-import

./: .gitignore  Makefile  README.md  mypy.ini  pylintrc  pyproject.toml
.github/workflows/: pythonpackage.yml
examples/: broken.csv  broken_parser.py
src/csv_import/: __main__.py  cli.py
src/csv_import/csv/: parsers.py  processors.py  text.py
tests/csv_import/csv/: test_parsers.py  test_processors.py  test_text.py
tests/csv_import/csv/fixtures/: 01_correct_file_with_commas.csv  02_correct_file_with_tabulations.csv  03_correct_file_with_enclosed_fields.csv
