[tool.poetry]
name = "csv-import"
version = "0.0.1"
description = "csv-import is a library designed for creating highly customizable CSV parsers able to import parsed result into relational DBs"
authors = ["Viacheslav Bessonov <viacheslav.a.bessonov@gmail.com>"]
packages = [
    { include = "csv_import", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
isort = "^4.3.21"
flake8 = "^3.7.9"
pylint = "^2.4.4"
mypy = "^0.770"
parameterized = "^0.7.1"
coverage = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
